...

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
    <Button
        android:id="@+id/btntwo"
        android:layout_width="190dip"
        android:layout_height="50dip"

        android:layout_alignParentRight="true"

        android:layout_weight="0.03"
        android:background="@drawable/purple_button_larg"
        android:gravity="center|fill_vertical"
        android:layout_centerInParent="true"
        android:text="رفت و برگشت"
        android:textColor="#fff"
        android:textSize="12sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="190dip"
        android:layout_height="50dip"

        android:layout_alignParentLeft="true"

        android:layout_weight="0.03"
        android:layout_centerInParent="true"
        android:background="@drawable/raft_big"
        android:gravity="center|fill_vertical"
        android:text="رفت"
        android:textColor="#808080"
        android:textSize="12sp"
        android:visibility="visible" />
    <!--
        <ScrollView

...
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.09"
                    android:gravity="right"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayout_mabda"
                        android:layout_width="wrap_content"
                        android:layout_height="101dp"
                        android:layout_above="@+id/linearLayout1"
                        android:layout_gravity="right"
                        android:layout_marginRight="3dip"
                        android:layout_marginTop="10dp"
...
                            android:textColor="#fff"
                            android:textSize="11dip" />
                    </LinearLayout>
                    <!-- /////////////////////////////////linear layout maghsad////////////////////////////////////////////// -->

                    <LinearLayout
                        android:id="@+id/linearLayout_maghsad"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/linearLayout1"
                        android:layout_gravity="right"
                        android:layout_marginRight="3dip"
                        android:layout_marginTop="1dp"
...
            android:layout_height="110dp"

            android:background="#fff"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cvDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
...
                            android:layout_height="30dp"
                            android:layout_gravity="top"
                            android:text="1"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnPlusB"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            android:background="@drawable/background_strock"
                            android:text="+"
                            android:textColor="#000000" />
...
                            android:layout_height="30dp"
                            android:layout_gravity="top"
                            android:text="0"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnPlusK"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            android:background="@drawable/background_strock"
                            android:text="+"
                            android:textColor="#000000" />
...
                            android:layout_height="30dp"
                            android:layout_gravity="top"
                            android:text="0"
                            android:textColor="#000000" />

                        <Button
                            android:id="@+id/btnPlusN"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_margin="1dp"
                            android:background="@drawable/background_strock"
                            android:text="+"
                            android:textColor="#000000" />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/searchPlan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
...
