...
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="4dp"
                android:layout_weight="0.02"
...
                                    android:layout_width="90dp"

                                    android:layout_height="match_parent"
                                    android:layout_marginLeft="1dp"

                                    android:gravity="center"
                                    android:text="استانبول"
                                    android:textColor="#000"
                                    android:textSize="@dimen/_12dp_txtSize" />


                            </LinearLayout>

...
                            android:textSize="@dimen/_12dp_txtSize"
                            android:textAppearance="@style/Arrow"
                            android:textColor="#000"
                            android:text="@string/icon_exp_up"
                            />
                        <TextView
                            android:id="@+id/txt_economi"
                            android:layout_width="0dp"
                            android:layout_weight="0.2"

                            android:layout_height="match_parent"
                            android:layout_marginLeft="0dp"

                            android:background="@drawable/background_strock_blue_dark_economi"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:text="اکونومی"
                            android:textColor="#003399"
                            android:textSize="9dp" />

                        <TextView
                            android:id="@+id/txttedad"
                            android:layout_width="0dp"
...
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnSelect"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="123dp"
                    android:layout_height="28dp"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
...
